vbnc/vbnc/vbnc/tests/Errors/30210.vb
Option Strict On

Class T
    Function A()
        Return Nothing
    End Function
End Class